[package]
name = "rvmarm"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
spin = "0.9"
bitflags = "2.1"
bit_field = "0.10"
numeric-enum-macro = "0.2"
buddy_system_allocator = "0.8"
tock-registers = "0.8"
aarch64-cpu = "{git = "https://github.com/saltytine/aarch64-cpu"}
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
